some final changes

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://localhost:27017/blogify
+MONGO_URL=mongodb+srv://<credentials>@blogproject.tnluecy.mongodb.net/?appName=mongosh+2.5.0
 PORT=8000
