some last changes

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGO_URL=mongodb+srv://Rishant_Singh:Rishant1408@blogproject.tnluecy.mongodb.net/blogify?retryWrites=true&w=majority
-PORT=8000
+# PORT=8000
